--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -131,6 +131,10 @@
             android:exported="false">
         </activity>
         <activity
+            android:name=".screens.seller.EditStoreActivity"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".screens.ChatActivity"
             android:exported="false" />
     </application>
