--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,6 +93,11 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
 
+    // Cloudinary
+    implementation 'com.cloudinary:cloudinary-android:2.4.0'
+    
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 }
 
 kapt {
