--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,11 @@ android {
         jvmTarget = JavaVersion.VERSION_17
     }
 
+    packagingOptions {
+        exclude 'META-INF/INDEX.LIST'
+        exclude 'META-INF/DEPENDENCIES'
+    }
+
 }
 
 dependencies {
@@ -92,6 +97,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.firebase:firebase-messaging'
+
+    // Google Auth for FCM
+    implementation('com.google.auth:google-auth-library-oauth2-http:1.15.0') {
+        exclude group: 'org.apache.httpcomponents'
+    }
 
     // Cloudinary
     implementation 'com.cloudinary:cloudinary-android:2.4.0'
